cmake_minimum_required(VERSION 3.29)
project(SuanFa)

set(CMAKE_CXX_STANDARD 20)

add_executable(1.1 experiment1/1.1.cpp)
add_executable(1.2 experiment1/1.2.cpp)
add_executable(1.3 experiment1/1.3.cpp)
add_executable(1.4 experiment1/1.4.cpp)
add_executable(1.5 experiment1/1.5.cpp)
add_executable(1.6 experiment1/1.6.cpp)
add_executable(1.7 experiment1/1.7.cpp)
add_executable(1.8 experiment1/1.8.cpp)
add_executable(1.9 experiment1/1.9.cpp)

add_executable(2.1 experiment2/2.1.cpp)
add_executable(2.2 experiment2/2.2.cpp)
add_executable(2.3 experiment2/2.3.cpp)
add_executable(2.4 experiment2/2.4.cpp)
add_executable(2.5 experiment2/2.5.cpp)
add_executable(2.6 experiment2/2.6.cpp)
add_executable(2.7 experiment2/2.7.cpp)
add_executable(2.8 experiment2/2.8.cpp)
add_executable(2.9 experiment2/2.9.cpp)

add_executable(3.1 experiment3/3.1.cpp)
add_executable(3.2 experiment3/3.2.cpp)
add_executable(3.3 experiment3/3.3.cpp)
add_executable(3.4 experiment3/3.4.cpp)
add_executable(3.5 experiment3/3.5.cpp)
add_executable(3.6 experiment3/3.6.cpp)
add_executable(3.7 experiment3/3.7.cpp)
add_executable(3.8 experiment3/3.8.cpp)
add_executable(3.9 experiment3/3.9.cpp)

add_executable(4.1 experiment4/4.1.cpp)
add_executable(4.2 experiment4/4.2.cpp)
add_executable(4.3 experiment4/4.3.cpp)
add_executable(4.4 experiment4/4.4.cpp)
add_executable(4.5 experiment4/4.5.cpp)

add_executable(5.1 experiment5/5.1.cpp)
add_executable(5.2 experiment5/5.2.cpp)
add_executable(5.3 experiment5/5.3.cpp)
add_executable(5.4 experiment5/5.4.cpp)
add_executable(5.5 experiment5/5.5.cpp)

add_executable(6.1 experiment6/6.1.cpp)
add_executable(6.2 experiment6/6.2.cpp)
add_executable(6.3 experiment6/6.3.cpp)
add_executable(6.4 experiment6/6.4.cpp)
add_executable(6.5 experiment6/6.5.cpp)

add_executable(7.1 experiment7/7.1.cpp)
add_executable(7.2 experiment7/7.2.cpp)
add_executable(7.3 experiment7/7.3.cpp)
add_executable(7.4 experiment7/7.4.cpp)
add_executable(7.5 experiment7/7.5.cpp)
add_executable(7.6 experiment7/7.6.cpp)
add_executable(7.7 experiment7/7.7.cpp)
add_executable(7.8 experiment7/7.8.cpp)
add_executable(7.9 experiment7/7.9.cpp)